--- a/assets/dragonwell.css
+++ b/assets/dragonwell.css
@@ -91,6 +91,7 @@ ul  {
         ". peets peets peets cbtl cbtl cbtl cbtl mcnt mcnt mcnt ." 
         ". . . comp comp comp comp comp comp . . ."
         "surv surv surv surv pers pers pers pers pers pers pers pers" 
+        ". . . . persp persp persp persp persp persp persp persp"    
         ". . flowp flowp flowp flowp flowp flowp flowp flowp . ."
         ". flow flow flow flow flow flow flow flow flow flow ." 
         "flow3 flow3 flow3 flow3 flow3 flow3 flow2 flow2 flow2 flow2 flow2 flow2"
@@ -347,7 +348,7 @@ ul  {
 }
 
 .home2 p, .coffee1 p, .ethi p, .surv p, .pers p,
-.peets p, .cbtl p, .mcnt p, .stylec, .flow p, .wires p {
+.peets p, .cbtl p, .mcnt p, .stylec, .flow p, .wires p, .persp {
     margin-top: 20px;
     text-align: center;
     line-height: 140%;
@@ -424,6 +425,11 @@ ul  {
 
 .pers {
     grid-area: pers;
+    
+}
+
+.persp {
+    grid-area: persp;
     
 }
 
@@ -727,6 +733,7 @@ ul  {
         "peets peets peets cbtl cbtl cbtl cbtl cbtl mcnt mcnt mcnt mcnt" 
         ". . comp comp comp comp comp comp comp comp . ."
         "surv surv surv surv pers pers pers pers pers pers pers pers" 
+        ". . . . persp persp persp persp persp persp persp persp"    
         ". . flowp flowp flowp flowp flowp flowp flowp flowp . ."
         ". flow flow flow flow flow flow flow flow flow flow ." 
         "flow3 flow3 flow3 flow3 flow3 flow3 flow2 flow2 flow2 flow2 flow2 flow2"
@@ -828,7 +835,7 @@ ul  {
     }
     
      .home2 p, .coffee1 p, .ethi p, .surv p, .pers p,
-     .peets p, .cbtl p, .mcnt p, .stylec, .flow p, .wires p {
+     .peets p, .cbtl p, .mcnt p, .stylec, .flow p, .wires p, .persp {
        line-height: 150%;
        font-size: 14px;
     }
@@ -884,7 +891,8 @@ ul  {
         ". prop prop prop prop prop prop prop prop prop prop ."
         "peets peets peets peets cbtl cbtl cbtl cbtl mcnt mcnt mcnt mcnt" 
         ". . comp comp comp comp comp comp comp comp . ."
-        "surv surv surv surv pers pers pers pers pers pers pers pers" 
+        "surv surv surv surv pers pers pers pers pers pers pers pers"
+        ". . . . persp persp persp persp persp persp persp persp"    
         ". . flowp flowp flowp flowp flowp flowp flowp flowp . ."
         ". flow flow flow flow flow flow flow flow flow flow ." 
         "flow3 flow3 flow3 flow3 flow3 flow3 flow2 flow2 flow2 flow2 flow2 flow2"
@@ -975,6 +983,7 @@ ul  {
         "comp comp comp comp comp comp"
         "surv surv surv surv surv surv"
         "pers pers pers pers pers pers" 
+        "persp persp persp persp persp persp"
         "flowp flowp flowp flowp flowp flowp"
         "flow flow flow flow flow flow" 
         "flow2 flow2 flow2 flow2 flow2 flow2"     
@@ -1072,7 +1081,7 @@ ul  {
     }
     
    .home2 p, .coffee1 p, .ethi p, .surv p, .pers p,
-   .peets p, .cbtl p, .mcnt p, .stylec, .flow p, .wires p {
+   .peets p, .cbtl p, .mcnt p, .stylec, .flow p, .wires p, .persp {
        line-height: 130%;
        font-size: 14px;
     }
@@ -1088,11 +1097,16 @@ ul  {
     
     
     .pers {
-       margin: 10% 0 12%;
+       margin: 10% 0 0%;
        background-color: #E2EBD9;
         padding: 6% 8% 7% 8%;
     }
     
+    .persp {
+        margin-bottom: 15%;
+                padding: 0 3%;
+
+    }
     
     .pers img {
        display: none;
@@ -1108,7 +1122,7 @@ ul  {
     .mobilepers img {
       display: initial;
       width: 70%;
-      margin-top: 7%;
+      margin: 7% 15% 0%;
 }
     
     
@@ -1117,22 +1131,23 @@ ul  {
         font-weight: bold;
         font-size: 26px;
         letter-spacing: -.4px;
+        text-align: center;
     }
     
     .mobilepers p {
-        text-align: left;
+        
         letter-spacing: .4px;
-        font-size: 20px;
+        font-size: 18px;
         margin-top: 6%;
         
     }
     
     #quote {
-        margin: 0% 9% 8% 13%;
+        margin: 0% -5% 0% -5%;
         font-weight: normal;
         letter-spacing: -.4px;
         color: #405824;
-        
+        font-size: 24px;
     }
     
     
