--- a/assets/dragonwell.css
+++ b/assets/dragonwell.css
@@ -772,6 +772,9 @@ ul  {
         
     }
     
+    .case {
+        margin-top: 80%;
+    }
     
     .csnav li {
   
@@ -917,6 +920,14 @@ ul  {
     
      }
     
+    .case {
+        margin-top: 45%;
+    }
+    
+    .dlogo img {
+    margin-top: 15px;
+}
+    
     .csnav {
         margin: 40px 0px 30px;
     }
@@ -1022,7 +1033,7 @@ ul  {
     }
     
     .csnav ul {
-        margin-left: 30px;
+        margin-left: 50px;
     }
     
     .sticky {
