--- a/assets/style.css
+++ b/assets/style.css
@@ -84,7 +84,11 @@ ul  {
         ". . subname subname subname subname subname subname subname . . ."
         ". . position position position position position position . . . ."
         "chi chi chi chi chi chi chi chi chi chi chi chi"
-        "drag drag drag drag bud bud bud bud orion orion orion orion"
+        /*"drag drag drag drag bud bud bud bud orion orion orion orion" */
+        "veo veo veo veo veo veo veo veo veo veo veo veo"
+        "drag drag drag drag drag drag drag drag drag drag drag drag"
+        "bud bud bud bud bud bud bud bud bud bud bud bud"
+        "orion orion orion orion orion orion orion orion orion orion orion orion"
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
         
 }
@@ -137,6 +141,7 @@ p {
 
 .background img {
     width: 100%;
+    display: none;
    
 }
 
@@ -144,8 +149,50 @@ p {
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin: 36px 0px 60px;       
+    justify-content: start;
+    margin: 36px 0px 2px;
+    height: 450px;
+    overflow: hidden;
+}
+
+.veo {
+    grid-area: veo;
+    background-color: white;
+    color: white;
+    font-size: 36px;
+    border: 3px solid #00b8aa;
+    box-sizing: border-box;
+}
+
+
+
+
+.veo img {
+    height: 104%;
+    margin: 0 -120px;
+}
+
+.veo h2 {
+    font-size: 40px;
+   margin: 12% 12% 18% 12%;
+    
+}
+
+.veo img:nth-child(2) {
+   /* margin-left: -3%; */
+}
+
+
+.veooverlay {
+   
+    position: absolute;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    font-family: helvetica neue;
+    background-color: #00b8aa;
+    opacity: 0;
+    transition: .6s ease;
 }
 
 .drag {
@@ -155,8 +202,18 @@ p {
 
 .drag img {
     height: 80px;
-    margin: 40%;
-    padding-right: 3%;
+   margin: 10% 10% 18% 9%;
+    
+}
+
+.drag img:nth-child(2) {
+    margin-left: 3%;
+}
+
+.drag img:nth-child(n+2) {  
+    height: 95%;
+    margin: 0px 5px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
 }
 
 .dragoverlay {
@@ -174,14 +231,14 @@ p {
 
 
 .drag:hover .dragoverlay {
-    opacity: .9;
+    opacity: 0;
    
 }
 
- .drag:hover img {
+/*u .drag:hover img {
     filter: blur(3px);
     
-}  
+}  */
 
 
 .budoverlay {
@@ -197,13 +254,13 @@ p {
 
 
 .bud:hover .budoverlay {
-    opacity: .9;
+    opacity: 0;
 }
 
-.bud:hover img {
+/* .bud:hover img {
     filter: blur(3px);
     
-}
+}  */
 
 .orionoverlay {
     position: absolute;
@@ -217,12 +274,12 @@ p {
 }
 
 .orion:hover .orionoverlay {
-    opacity: .9;
+    opacity: 0;
 }
-.orion:hover img {
+/*.orion:hover img {
     filter: blur(3px);
     
-}
+} */
 
 
 .hovtext {
@@ -262,18 +319,19 @@ p {
 
 
 .hovbutton {
+     position: absolute;
+     left: 10%;
      text-align: center;
-     margin: 0 25%;
      border-style: solid;
      border-radius: 8px;
      border-width: 1px;
      border-color: white;
      color: white;
-     padding: 12px 1% 14px;
+     padding: 12px 2% 14px;
      font-weight: bold;
      font-size: 18px;
      transition: .3s ease;
-     
+      margin-top: 7%;
 }
 
 
@@ -285,7 +343,10 @@ p {
 
 
 
-
+.drag-button {
+    background: #384B21;
+    
+}
 .bud-button {
      background: #141414;
 }
@@ -297,11 +358,25 @@ p {
 
 .orion-button {
     background: #001B4C;
+   
 }
 
 .orion-button:hover {
     background: white;
     color: #001B4C;
+}
+  
+
+.veo-button {
+    background: white;
+    border-color: #00b8aa;
+    border-width: 2px;
+    color: #00b8aa;
+}
+
+.veo-button:hover {
+    background: #00b8aa;
+    color: white;
 }
     
 
@@ -313,19 +388,35 @@ p {
     
 }
 
-.bud img {
+.bud img:nth-child(1) {
     height: 90px;
-    margin: 30%;
+    margin: 13% 13% 20% 13%;
+}
+
+.bud img:nth-child(2) {
+    height: 92%;
+    margin: 0;
+    margin-top: 10px;
+
+    
 }
 
 .orion {
     grid-area: orion;
     background-color: #001b4c;
+    margin-bottom: 4%;
 }
 
 .orion img {
     height: 60px;
-    margin: 25%;
+    margin: 13% 13% 19% 13%;
+}
+
+.orion img:nth-child(2) {
+    height: 96%;
+    margin: 0;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
+    
 }
 
 .dragmob, .budmob, .orionmob {
@@ -420,7 +511,7 @@ p {
 
 
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1400px) {
     
      body {
         margin: 50px 50px 22px;
@@ -432,9 +523,12 @@ p {
         "logo . . . . . . . . nav nav nav"
         ". name name name name name name . . . . ."
         ". subname subname subname subname subname subname subname subname subname subname subname"
-        ". position position position position position position position position position position ."
+        ". position position position position position position position . . . ."
         "chi chi chi chi chi chi chi chi chi chi chi chi"
-        "drag drag drag drag bud bud bud bud orion orion orion orion"
+        "veo veo veo veo veo veo veo veo veo veo veo veo"
+        "drag drag drag drag drag drag drag drag drag drag drag drag"
+        "bud bud bud bud bud bud bud bud bud bud bud bud"
+        "orion orion orion orion orion orion orion orion orion orion orion orion"
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
     
      }
@@ -442,6 +536,24 @@ p {
     .dragoverlay, .budoverlay, .orionoverlay {
     
     }
+    
+    .veo img {
+    height: 97%;
+    margin: 0 -80px;
+}
+    
+    .drag img:nth-child(n+2) {
+    height: 85%;
+    margin: 0px;
+    margin-right: 10px;
+        
+}
+    
+    .bud img:nth-child(2) {
+    height: 86%;
+        
+}   
+    
     
     .hovtext ul, .hovtext p, .hovbutton {
         font-size: 18px;
@@ -458,11 +570,64 @@ p {
     }
     
     .hovbutton {
-        margin: 0 20%;
-        padding: 10px 0px 13px;
+      right: 3%;
     }
     
 
+  */  
+    
+    
+@media (max-width: 1100px) {
+    
+    
+.container {
+        grid-gap: 0px 20px;
+        grid-template-areas: 
+        "logo . . . . . . . . nav nav nav"
+        ". name name name name name name . . . . ."
+        ". subname subname subname subname subname subname subname subname subname subname subname"
+        ". position position position position position position position position . . ."
+        "chi chi chi chi chi chi chi chi chi chi chi chi"
+        "veo veo veo veo veo veo veo veo veo veo veo veo"
+        "drag drag drag drag drag drag drag drag drag drag drag drag"
+        "bud bud bud bud bud bud bud bud bud bud bud bud"
+        "orion orion orion orion orion orion orion orion orion orion orion orion"
+        "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
+    
+     }
+
+.hovbutton {
+      right: auto;
+      left: 8%;
+    margin-top: 10%;
+    
+    }
+
+
+.veo h2 {
+    margin: 10% 10% 20% 10%;
+      
+    
+    }
+    
+    
+    .drag img {
+      margin: 6% 6% 14% 6%;
+    }
+    
+    .drag img:nth-child(n+2) {
+        margin: 10px;
+    }
+    
+    .bud img:nth-child(1) {
+      margin: 12% 12% 20% 12%;
+    }
+    
+    .orion img {
+      
+    }
+        
+}
 
 
 /* ------------------ iPad and portrait phones ------------------------*/
@@ -483,7 +648,10 @@ p {
         ". subname subname subname subname subname subname subname subname subname subname subname"
         ". position position position position position position position position position position ."
         "chi chi chi chi chi chi chi chi chi chi chi chi"
-        "drag drag drag drag bud bud bud bud orion orion orion orion"
+         "veo veo veo veo veo veo veo veo veo veo veo veo"
+        "drag drag drag drag drag drag drag drag drag drag drag drag"
+        "bud bud bud bud bud bud bud bud bud bud bud bud"
+        "orion orion orion orion orion orion orion orion orion orion orion orion"
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
     
      }
@@ -495,7 +663,7 @@ p {
      }
     
     .name {
-        margin-top: 40px;
+        margin-top: 55px;
         margin-bottom: 0;
         
     }
@@ -506,23 +674,42 @@ p {
      }
     
      .proj {
-        margin: 16px 0px 60px;
+        margin: 20px -20px 10px;
+        height: 250px; 
     } 
     
+    .orion {
+        margin-bottom: 18px;
+    }
     
+    
+    .veo h2 {
+        font-size: 30px;
+        margin: 8% 8% 18% 10%;
+    }
+    
+    .veo img {
+     margin: 0 -67px;
+    }
     
     .drag img {
-       height: 50px;
-       margin: 35%;
-     }
+       height: 55px;
+       margin: 7% 6% 18% 6%;
+}
     
-     .bud img {
-       height: 60px;
-       
+    .drag img:nth-child(n+2) {
+    margin-right: -3px;
+}
+
+    
+     .bud img:nth-child(1) {
+       height: 70px;
+       margin: 12% 10% 23% 11%;
      }
     
     .orion img {
        height: 50px;
+        margin: 6% 10% 17% 10%;
      }
     
     
@@ -530,7 +717,7 @@ p {
     
     
    .dragoverlay, .budoverlay, .orionoverlay {
-       opacity: 1;
+       opacity: 0;
     }
     
     .drag:hover img, .bud:hover img, .orion:hover img {
@@ -538,20 +725,17 @@ p {
        
 }
     .drag:hover .dragoverlay {
-    opacity: 1;
+    opacity: 0;
 }
     .bud:hover .budoverlay {
-    opacity: 1;
+    opacity: 0;
 }
     .orion:hover .orionoverlay {
-    opacity: 1;
+    opacity: 0;
 }
 
     
-    #bye {
-        opacity: 0;
-    }
-    
+   
     #hidrag{
        margin: -5% 0 25% 13%;
     }
@@ -597,9 +781,9 @@ p {
     }
     
     .hovbutton {
-        margin: 0 20%;
-        padding: 8px 0px;
-        border-width: 1px;
+        margin: 7% 1%;
+        padding: 8px 10px;
+        border-radius: 6px
     }
     
      .footlogo img {
@@ -623,7 +807,10 @@ p {
         ". subname subname subname subname subname subname subname subname subname subname subname"
         ". position position position position position position position position position position ."
         "chi chi chi chi chi chi chi chi chi chi chi chi"
-        "drag drag drag drag bud bud bud bud orion orion orion orion"
+        "veo veo veo veo veo veo veo veo veo veo veo veo"
+        "drag drag drag drag drag drag drag drag drag drag drag drag"
+        "bud bud bud bud bud bud bud bud bud bud bud bud"
+        "orion orion orion orion orion orion orion orion orion orion orion orion"
         "footnav footnav footnav contact contact contact contact contact contact contact . footlogo"
     
      }   
@@ -651,9 +838,7 @@ p {
         margin-bottom: 8%;
     }
 
-    .hovbutton {
-        margin: 0 15%;
-    }
+   
     .bud img {
         height: 55px;
     }
@@ -690,23 +875,23 @@ p {
         margin-bottom: 6%;
     }
 
-    .hovbutton {
-        margin: 0 7%;
-    }
+    
     .bud img {
         height: 45px;
     }
     
-    .drag img {
-       height: 44px;
-     }
+    
         
         .orion img {
             height: 40px;
+            margin: 6% 11% 17% 12%;
         }    
         
         
+        .hovbutton {
+        margin: 11% 1%;
         
+        }
         
         
 }    
@@ -726,9 +911,10 @@ p {
         grid-template-areas: 
         "logo nav nav nav nav nav"
         "name name name name name name"
-        "subname subname subname subname subname subname"
+        "subname subname subname subname subname ."
         "position position position position position position"
         "chi chi chi chi chi chi"
+        "veo veo veo veo veo veo"    
         "drag drag drag drag drag drag"
         "bud bud bud bud bud bud"
         "orion orion orion orion orion orion"
@@ -747,6 +933,10 @@ p {
         
     }
     
+    .position {
+        margin-bottom: 10px;
+    }
+    
     .background {
         margin-bottom: 16px;
     }
@@ -755,22 +945,27 @@ p {
     margin: 16px 0px 20px;
 }
     
+    .veo h2 {
+   
+    margin: 8% 14% 18% 17%;
+    }
+    
     .drag img {
-       height: 70px;
-        z-index: 0;
+       height: 60px;
+        margin: 7% 8% 25% 8%;
        
      }
     
-     .bud img {
-       height: 80px;
-       margin: 35%;
-         z-index: 0;
+     .bud img:nth-child(1){
+      
+      margin: 12% 19% 30% 20%;
+    
      }
     
     .orion img {
        height: 60px;
-       margin: 40% 0%;
-        z-index: 0;
+       margin: 10% 20% 24%;
+        
      }
     
     
@@ -778,7 +973,7 @@ p {
     
     
     .dragoverlay, .budoverlay, .orionoverlay {
-       opacity: 1;
+       opacity: 0;
     }
     
     .drag:hover img, .bud:hover img, .orion:hover img {
@@ -787,7 +982,7 @@ p {
 }
     
     #bye {
-        opacity: 0;
+        opacity: 1;
     }
     
     #hidrag{
@@ -818,7 +1013,7 @@ p {
  
     .hovbutton {
         font-size: 14px;
-        
+        margin: 20% 5%;
     }
     
     .hovbutton:click {
@@ -845,8 +1040,8 @@ p {
     
   
     .hovbutton {
-        margin: 0px 25%;
-        padding: 10px 0% 11px;
+        
+        padding: 10px 4% 11px;
     }
     
     
