--- a/assets/veo.css
+++ b/assets/veo.css
@@ -68,41 +68,49 @@ ul  {
     grid-template-rows: auto;
     grid-template-areas: 
         "logo . . . . . . . . nav nav nav"
-        ". . headshot headshot headshot position position position position position . ."
+        ". . . . header header header header . . . ."
+        ". . . position position position position position position . . ."
     /*    ". . position position position position position position . . . ." */
-        ". . . . . veolist veolist veolist veolist veolist . ."
+        "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
+        "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
+        ". . . veolist veolist veolist veolist veolist veolist . . ."
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
         
 }
 
+.header {
+    
+    grid-area: header;
+    text-align: center;
+    font-size: 60px;
+    margin-top: 150px;
+}
 .headshot {
     grid-area: headshot;
 
 }
 
 .headshot img {
-    margin-top: 180px;
-    width: 90%;
+    margin-top: 40px;
+    width: 110%;
+    margin-left: -5%;
 }
 
-.resume {
-    grid-area: resume;
-    height: 40px;
-    border: 2px solid #2C1352;
-    border-radius: 6px;
-    background-color: white;
-    color: #2C1352;
-    font-size: 16px;
-    font-family: helvetica neue;    
-    font-weight: bold;
-    margin: 240px 10px 0px;
-    transition: .2s ease;
+.mocks {
+    margin-top: 100px;
+    grid-area: mocks;
+    
 }
 
-.resume:hover {
-  background: #2C1352;
-  color: white;
+.mocks img {
+    width: 50%;
+    margin-right: -27%;
 }
+
+.mocks img:nth-child(1){
+    margin-left: -10%;
+}
+
 
 
 p {
@@ -116,7 +124,7 @@ p {
     line-height: 160%;
     letter-spacing: .4px;
     grid-area: position;
-    margin: 171px 0px 250px;
+    margin: 91px 0px 0px;
 }
 
 .position span {
@@ -130,6 +138,30 @@ p {
     border-bottom: 3px solid #00b8aa; 
 }
 
+.veolist {
+    font-size: 22px;
+    font-weight: 200;
+    line-height: 160%;
+    letter-spacing: .4px;
+    grid-area: veolist;
+    margin: 20px 0px 200px;
+}
+
+.veolist ul {
+    list-style-type: disc; 
+    font-weight: 200;
+    line-height: 160%;
+    letter-spacing: .4px;
+    margin-left: 7%;
+    grid-area: veolist;
+    font-size: 20px;
+}
+
+.veolist span {
+    font-weight: normal;
+    letter-spacing: -0.5px;
+    font-size: 28px;
+}
 
 
 .footnav {
@@ -224,18 +256,21 @@ p {
         grid-gap: 0px 20px;
         grid-template-areas: 
         "logo . . . . . . . . nav nav nav"
-        ". headshot headshot headshot headshot . . . . . . ."
-        ". position position position position position position position position position . ."
-        ". veolist veolist veolist veolist veolist veolist veolist veolist veolist . ."
+        ". . . . header header header header . . . ."
+        ". . position position position position position position position position . ."
+        "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
+        "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
+        ". . veolist veolist veolist veolist veolist veolist veolist veolist . ."
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
     
      }
     
-    .headshot img {
-         margin-top: 70px;
-         width: 80%;
- 
+    .mocks {
+    margin-top: 60px;
+        
     }
+    
+  
     
     .logo img {
          height: 50px
@@ -248,7 +283,7 @@ p {
     }
 
     .position {
-         margin: 10px 0px 80px;
+         margin: 60px 0px 0px;
          font-size: 20px;
  
      }
@@ -264,18 +299,45 @@ p {
 /* ------------------ Landscape smaller phones ------------------------*/
 
 
-@media (max-width: 640px) {
+@media (max-width: 670px) {
     
     .container {
         grid-gap: 0px 20px;
         grid-template-areas: 
         "logo . . . . . . . . nav nav nav"
-        ". headshot headshot headshot headshot . . . . . . ."
+        ". . . header header header header header header . . ."
+
         ". position position position position position position position position position position ."
+        "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
+        "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
         ". veolist veolist veolist veolist veolist veolist veolist veolist veolist veolist ."
         "footnav footnav footnav contact contact contact contact contact contact contact . footlogo"
     
      }
+    
+    
+    
+    .header {
+        margin: 70px 0px 40px;
+    }
+    
+    
+    .position {
+        margin-top: 0;
+    }
+    
+    .veolist {
+        margin-bottom: 80px;
+    }
+    
+  /*  .mocks img:nth-child(1) {
+    margin-left: -21%;
+}
+
+.mocks img {
+    width: 60%;
+    margin-right: -33%;
+}    */
     
     
 }
@@ -296,13 +358,17 @@ p {
         grid-gap: 0px 20px;
         grid-template-areas: 
         "logo nav nav nav nav nav"
-        "headshot headshot headshot headshot . . "
+        "header header header header header header"
         "position position position position position position"
+        "mocks mocks mocks mocks mocks mocks"
+        "headshot headshot headshot headshot headshot headshot "
         "veolist veolist veolist veolist veolist veolist"
         "contact contact contact contact contact contact"
         ". . footlogo footlogo . ."
     
      }
+    
+    
     
     .headshot img {
         margin-top: 50px;
